--- a/TouchEffectSample/TogglePage.xaml
+++ b/TouchEffectSample/TogglePage.xaml
@@ -31,14 +31,14 @@
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.IsToggled="false"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -56,15 +56,15 @@
                 Grid.Column="1" 
                 touch:TouchEff.IsToggled="true"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -82,15 +82,15 @@
                 Grid.Column="2" 
                 touch:TouchEff.IsToggled="false"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -109,14 +109,14 @@
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.IsToggled="false"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -135,14 +135,14 @@
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.IsToggled="true"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -160,15 +160,15 @@
                 Grid.Column="2" 
                 touch:TouchEff.IsToggled="false"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -186,15 +186,15 @@
                 Grid.Column="0" 
                 touch:TouchEff.IsToggled="false"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -212,15 +212,15 @@
                 Grid.Column="1" 
                 touch:TouchEff.IsToggled="false"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
@@ -238,15 +238,15 @@
                 Grid.Column="2" 
                 touch:TouchEff.IsToggled="true"
                 touch:TouchEff.Command="{Binding Command, Source={x:Reference page}}"
-                touch:TouchEff.RegularBackgroundColor="Red"
+                touch:TouchEff.NormalBackgroundColor="Red"
                 touch:TouchEff.PressedBackgroundColor="Gold"
                 touch:TouchEff.PressedRotationY="180"
                 touch:TouchEff.PressedScale="1.2"
                 touch:TouchEff.RippleCount="-1"
                 touch:TouchEff.PressedAnimationEasing="{x:Static forms:Easing.CubicInOut}"
-                touch:TouchEff.RegularAnimationEasing="{x:Static forms:Easing.CubicInOut}"
+                touch:TouchEff.NormalAnimationEasing="{x:Static forms:Easing.CubicInOut}"
                 touch:TouchEff.PressedAnimationDuration="500"
-                touch:TouchEff.RegularAnimationDuration="500">
+                touch:TouchEff.NormalAnimationDuration="500">
             <Frame.Effects>
                 <touch:TouchEff AnimationStarted="OnAnimStarted"/>
             </Frame.Effects>
